force-app/main/default/objects/BlueWave_Surveys__c/fields/Who_You_Shadowed__c.field-meta.xml
<CustomField>
    <fullName>Who_You_Shadowed__c</fullName>
    <label>Who You Shadowed</label>
    <length>20</length>
    <type>Text</type>
</CustomField>