force-app/main/default/objects/BlueWave_Surveys__c/fields/Why_customers_do_don_t_use_BW__c.field-meta.xml
<CustomField>
    <fullName>Why_customers_do_don_t_use_BW__c</fullName>
    <label>Why customers do/don&apos;t use BW</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>