force-app/main/default/objects/BlueWave_Surveys__c/fields/X2_3_challenges_for_business__c.field-meta.xml
<CustomField>
    <fullName>X2_3_challenges_for_business__c</fullName>
    <label>2-3 challenges for business</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>