force-app/main/default/objects/BlueWave_Surveys__c/recordTypes/CS_Customer_Survey.recordType-meta.xml
<RecordType>
    <fullName>CS_Customer_Survey</fullName>
    <active>true</active>
    <label>CS Customer Survey</label>
</RecordType>