force-app/main/default/objects/BlueWave_Surveys__c/recordTypes/Employee_Engagement_Survey.recordType-meta.xml
<RecordType>
    <fullName>Employee_Engagement_Survey</fullName>
    <active>true</active>
    <label>Employee Engagement Survey</label>
</RecordType>