force-app/main/default/objects/BlueWave_Surveys__c/recordTypes/First_CS_Deal.recordType-meta.xml
<RecordType>
    <fullName>First_CS_Deal</fullName>
    <active>true</active>
    <label>First CS Deal</label>
</RecordType>