force-app/main/default/objects/BlueWave_Surveys__c/recordTypes/First_Deal_Partner_Survey.recordType-meta.xml
<RecordType>
    <fullName>First_Deal_Partner_Survey</fullName>
    <active>true</active>
    <description>First Deal Partner Survey</description>
    <label>First Deal Partner Survey</label>
</RecordType>