force-app/main/default/objects/BlueWave_Surveys__c/recordTypes/Net_Promoter_Score.recordType-meta.xml
<RecordType>
    <fullName>Net_Promoter_Score</fullName>
    <active>true</active>
    <label>Net Promoter Score - Customer</label>
</RecordType>