force-app/main/default/objects/BlueWave_Surveys__c/recordTypes/Net_Promoter_Score_Partner.recordType-meta.xml
<RecordType>
    <fullName>Net_Promoter_Score_Partner</fullName>
    <active>true</active>
    <description>Partner surveys</description>
    <label>Net Promoter Score - Partner</label>
</RecordType>