force-app/main/default/objects/BlueWave_Surveys__c/recordTypes/Partner_Feedback_Survey.recordType-meta.xml
<RecordType>
    <fullName>Partner_Feedback_Survey</fullName>
    <active>true</active>
    <description>Loan Partner Feedback for New Partner Portal</description>
    <label>Partner Feedback Survey</label>
</RecordType>