force-app/main/default/objects/BlueWave_Surveys__c/recordTypes/Partner_survey_portal_feedback_Q42017.recordType-meta.xml
<RecordType>
    <fullName>Partner_survey_portal_feedback_Q42017</fullName>
    <active>true</active>
    <description>Partner feedback on portal Q42017</description>
    <label>Partner survey - portal feedback Q42017</label>
</RecordType>