force-app/main/default/objects/BlueWave_Surveys__c/recordTypes/Project_Management_Shadowing.recordType-meta.xml
<RecordType>
    <fullName>Project_Management_Shadowing</fullName>
    <active>true</active>
    <label>Project Management Shadowing</label>
</RecordType>