force-app/main/default/objects/BlueWave_Surveys__c/recordTypes/Standard_Partner_Q_s_Survey.recordType-meta.xml
<RecordType>
    <fullName>Standard_Partner_Q_s_Survey</fullName>
    <active>true</active>
    <label>Standard Partner Q&apos;s Survey</label>
</RecordType>