force-app/main/default/objects/BlueWave_Surveys__c/recordTypes/Transformer_Award_Survey.recordType-meta.xml
<RecordType>
    <fullName>Transformer_Award_Survey</fullName>
    <active>true</active>
    <label>Transformer Award Survey</label>
</RecordType>