force-app/main/default/objects/BlueWave_Surveys__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>NPS_Category__c</columns>
    <columns>Case_Satisfaction__c</columns>
    <columns>Comment_Box__c</columns>
    <columns>Name_PM__c</columns>
    <columns>Account__c</columns>
    <columns>NPS__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>