force-app/main/default/objects/BlueWave_Surveys__c/listViews/CreatedDate.listView-meta.xml
<ListView>
    <fullName>CreatedDate</fullName>
    <columns>NAME</columns>
    <columns>Date_Created__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>CreatedDate</label>
</ListView>