force-app/main/default/objects/BlueWave_Surveys__c/listViews/Partner_survey_portal_feedback_Q42017.listView-meta.xml
<ListView>
    <fullName>Partner_survey_portal_feedback_Q42017</fullName>
    <columns>NAME</columns>
    <columns>Date_Created__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>NAME</field>
        
            <operation>equals</operation>
        
            <value>GetFeedback Survey Response: BlueWave Quarterly Partner Survey</value>
        
        </filters>
    <label>Partner survey - portal feedback Q42017</label>
</ListView>