force-app/main/default/objects/BlueWave_Surveys__c/listViews/Standard_Partner_Q_s.listView-meta.xml
<ListView>
    <fullName>Standard_Partner_Q_s</fullName>
    <columns>NAME</columns>
    <columns>Date_Created__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>NAME</field>
        
            <operation>equals</operation>
        
            <value>GetFeedback Survey Response: Standard Partner Qs</value>
        
        </filters>
    <label>Standard Partner Q&apos;s</label>
</ListView>